[gd_scene load_steps=5 format=2]

[ext_resource path="res://global_map/img/planet_ice.png" type="Texture" id=1]
[ext_resource path="res://global_map/button_navigator.gd" type="Script" id=2]
[ext_resource path="res://assets/icon/icons8-lock-24.png" type="Texture" id=3]
[ext_resource path="res://global_map/planet.tscn" type="PackedScene" id=4]





[node name="button_navigator" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 194.0
margin_bottom = 148.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Textures" ]
locked = false

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="locked" type="ColorRect" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.171875, 0.171875, 0.171875, 0.635373 )
__meta__ = {
"_edit_group_": true
}

[node name="locked" type="TextureRect" parent="locked" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -72.0
margin_right = 68.5
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="planet_selection" parent="." index="2" instance=ExtResource( 4 )]

margin_left = 97.0
margin_top = 65.0
margin_right = 97.0
margin_bottom = 65.0

[connection signal="focus_entered" from="." to="." method="_on_button_navigator_focus_entered"]

[connection signal="focus_exited" from="." to="." method="_on_button_navigator_focus_exited"]

[connection signal="pressed" from="." to="." method="_on_button_navigator_pressed"]


[editable path="planet_selection"]
